examples/test/testpolicy7791.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7791
  namespace: namespace131
spec:
  podSelector:
    matchLabels:
      key31: value46
      key6: value27
      key22: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value18
      podSelector:
        matchLabels:
          key40: value9
          key20: value3
          key45: value45
